@@ -574,3 +574,5 @@
 2017-10-02 Fred Gleason <fredg@paravelsystems.com>
 	* Fixed a bug in 'SySource' where internal parameters were not properly
 	initialized in the default constructor.
+2017-10-03 Fred Gleason <fredg@paravelsystems.com>
+	* Added an 'SyLwrpClient::isConnected()' method.
